# task-management

./: .env.db.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
task_management/: config.py  domain.py  main.py
task_management/alembic/: env.py
task_management/alembic/versions/: 5528976b7e84_add_task_priority_column.py  82e5b20e89e6_initial_table_definitions.py
task_management/api/: app.py  schemas.py  tasks.py
task_management/api/auth/: routes.py  utils.py
task_management/db/: exceptions.py  schemas.py  utils.py
task_management/db/repositories/: base.py  tasks.py  users.py
tests/: conftest.py  test_repositories.py
