[tool.poetry]
name = "task_management"
version = "0.1.0"
description = ""
authors = ["n-freman <smiron1703@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
