[tool.poetry]
name = "task_management"
version = "0.1.0"
description = ""
authors = ["n-freman <smiron1703@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
asyncpg = "^0.30.0"
isort = "^6.0.0"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
bcrypt = "4.0.1"
pytest = "^8.3.4"
testcontainers = {extras = ["postgres"], version = "^4.9.1"}
pytest-asyncio = "^0.25.3"
psycopg2 = { version = "^2.9", optional = true }
psycopg2-binary = { version = "^2.9", optional = true }

[tool.poetry.extras]
mac = ["psycopg2"]
docker = ["psycopg2-binary"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
skip_gitignore = true
src_paths = ['task_management']

